# libxom-experiments

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  Vagrantfile  demo.c  example.c  modxom.c  test_notes.txt  xom
attacks/: CMakeLists.txt  remap.c
attacks/DMA/: CMakeLists.txt  dma_attack.c  kernel.cl
attacks/architecture/: CMakeLists.txt  instruction_encodings.h  instructions.cpp  instructions.h  ptrace.c  ptrace.cpp  recover.py  victim_code.s
attacks/interrupts/: CMakeLists.txt  execution_environment.py  instruction_models.py  ptrace.cpp  recover.py  trace.py  victim_code.s
attacks/microarchitecture/: CMakeLists.txt  cleanup_traces.py  meltdown.c  port_contention.c  port_profile.s  spectre.c  spectre_asm.s
attacks/microarchitecture/crypto/linux/: aesni_linux.S  aria_linux.c  camellia_linux.S  camellia_linux.c  chacha_linux.c  chcha_linux.S
attacks/microarchitecture/crypto/openssl/: aesni_ctr32_openssl.s  aria_openssl.c  camellia_openssl.c  chacha20_openssl.s
attacks/microarchitecture/libcache/: cache.h  cacheutils.h
attacks/microarchitecture/xom_tests/: attacks.h  load_value.s  meltdown.c  microarchitecture.cpp  microarchitecture.h  portsmash.c  ridl.c  spectre.c  spectre_asm.s  spectre_victim.s
attacks/microarchitecture/xom_tests/libcache/: cache.c  cacheutils.h
attacks/microarchitecture/xom_tests/spectre/: BTB.cpp  PHT.c  RSB.c
benchmarks/: CMakeLists.txt  allocation.c  benchmark.h  benchmarks-main.c  encryption_benchmarks.c  jumper.s  micro.c  utils.c
demos/: CMakeLists.txt  basic.c  features.c
demos/aes-gcm/: CMakeLists.txt  aes-gcm-tool.c
demos/aes-gcm/include/: aes.h  libxom-aes-gcm.h
demos/aes-gcm/src/: aes-init.c  aes-vaes.s  aes.s  dump-aes-fun.c  gcm.c  gfmul.s
demos/hmac/: CMakeLists.txt  hmac_sha256.c  hmac_sha256.s  hmac_sha256_noxom.c
demos/password-check/: CMakeLists.txt  password_check.c  password_check.s
demos/rsa/: CMakeLists.txt  rsa-main.c
libxom/: CMakeLists.txt  Doxyfile  libxom.c  libxom.h  reg_clear.s
modxom/: Makefile  modxom.c  modxom.h
